--- a/package.json
+++ b/package.json
@@ -36,18 +36,15 @@
   "author": "Christian Roy",
   "license": "MIT",
   "devDependencies": {
-    "@modelcontextprotocol/inspector": "^0.4.0",
-    "@tsconfig/node20": "^20.1.4",
-    "@types/jsdom": "^21.1.7",
-    "@types/node": "^22.10.1",
-    "esbuild": "^0.24.0",
-    "esbuild-register": "^3.6.0",
-    "jsdom": "^26.0.0",
+    "@tsconfig/node20": "^20.1.6",
+    "@types/node": "^24.2.0",
+    "esbuild": "^0.25.8",
     "ts-node": "^10.9.2",
-    "typescript": "^5.7.2"
+    "typescript": "^5.9.2"
   },
   "dependencies": {
-    "@modelcontextprotocol/sdk": "^1.4.1",
-    "asana": "^3.0.12"
+    "@modelcontextprotocol/sdk": "^1.17.2",
+    "asana": "^3.1.0",
+    "jsdom": "^26.1.0"
   }
 }
